--- a/src/apps/AOC2023.WebApp/wwwroot/404.html
+++ b/src/apps/AOC2023.WebApp/wwwroot/404.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Advent of Code 2023 - In-Browser Execution</title>
     <base href="/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/pico.min.css" />
     <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css">
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="AOC2023.WebApp.styles.css" rel="stylesheet" />
 </head>
@@ -27,6 +28,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="js/theme-switcher.js" />
 </body>
 
 </html>
