--- a/src/apps/AOC2023.WebApp/wwwroot/404.html
+++ b/src/apps/AOC2023.WebApp/wwwroot/404.html
@@ -28,7 +28,8 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="js/theme-switcher.js" />
+    <script src="js/theme-switcher.js"></script>
+    <!-- TODO: https://swharden.com/blog/2022-05-29-blazor-loading-progress -->
 </body>
 
 </html>
